force-app/main/default/objects/PDLM__Manufacturer_Part__c/PDLM__Manufacturer_Part__c.object-meta.xml
<CustomObject>
    <description>Relates Manufacturer Parts to Manufacturer Items used in product BOMs</description>
    <label>Manufacturer Part</label>
    <nameField>
        <label>Mfr. Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manufacturer Parts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>