force-app/main/default/objects/PDLM__Manufacturer_Part__c/fields/CM_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>CM_Part_Number__c</fullName>
    <label>CM Part Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>