force-app/main/default/objects/PDLM__Manufacturer_Part__c/fields/PDLM__EURoHS__c.field-meta.xml
<CustomField>
    <fullName>PDLM__EURoHS__c</fullName>
    <description>Environmental status for the part number like Yes, No, Unknown and Yes with Exemption.</description>
    <label>EURoHS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>