force-app/main/default/objects/PDLM__Manufacturer_Part__c/fields/PDLM__Manufacturer_Name__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Manufacturer_Name__c</fullName>
    <formula>PDLM__Manufacturer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer Name</label>
    <type>Text</type>
</CustomField>