force-app/main/default/objects/PDLM__Manufacturer_Part__c/fields/Source_2__c.field-meta.xml
<CustomField>
    <fullName>Source_2__c</fullName>
    <label>Source #2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digikey</fullName>
            </value>
            <value>
                <fullName>Mouser</fullName>
            </value>
            <value>
                <fullName>STN</fullName>
            </value>
            <value>
                <fullName>Ublox</fullName>
            </value>
            <value>
                <fullName>PSI</fullName>
            </value>
            <value>
                <fullName>Samsara</fullName>
            </value>
            <value>
                <fullName>Yomura</fullName>
            </value>
            <value>
                <fullName>GTT</fullName>
            </value>
            <value>
                <fullName>Avnet</fullName>
            </value>
            <value>
                <fullName>Gemalto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>