force-app/main/default/objects/PDLM__Manufacturer_Part__c/fields/Source_2_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Source_2_Batch_Size__c</fullName>
    <label>Source #2 Batch Size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>