force-app/main/default/objects/PDLM__Manufacturer_Part__c/fields/Source_2_Price__c.field-meta.xml
<CustomField>
    <fullName>Source_2_Price__c</fullName>
    <description>Pricing from the second source</description>
    <inlineHelpText>Pricing from the second source</inlineHelpText>
    <label>Source #2 Price</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>