force-app/main/default/objects/PDLM__Manufacturer_Part__c/fields/Source_3_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Source_3_Batch_Size__c</fullName>
    <label>Source #3 Batch Size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>