force-app/main/default/objects/PDLM__Manufacturer_Part__c/validationRules/PDLM__Manufacturer_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>PDLM__Manufacturer_Required</fullName>
    <active>true</active>
    <description>ensure that parts loaded have a Manufacturer assigned</description>
    <errorConditionFormula>ISBLANK(PDLM__Manufacturer__c)</errorConditionFormula>
    <errorMessage>Manufacturer lookup is required for Parts</errorMessage>
</ValidationRule>