force-app/main/default/objects/PDLM__Manufacturer_Part__c/listViews/PDLM__All.listView-meta.xml
<ListView>
    <fullName>PDLM__All</fullName>
    <columns>NAME</columns>
    <columns>PDLM__Manufacturer__c</columns>
    <columns>PDLM__Description__c</columns>
    <columns>Selected_Source__c</columns>
    <columns>Selected_Source_Unit_Price__c</columns>
    <columns>Source_1__c</columns>
    <columns>Source_1_Batch_Size__c</columns>
    <columns>Source_1_Part_Number__c</columns>
    <columns>Source_1_Price__c</columns>
    <columns>Source_2__c</columns>
    <columns>Source_2_Batch_Size__c</columns>
    <columns>Source_2_Part_Number__c</columns>
    <columns>Source_2_Price__c</columns>
    <columns>Source_3__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>