force-app/main/default/objects/PDLM__Manufacturer_Part__c/listViews/PLSC__All_MPNs.listView-meta.xml
<ListView>
    <fullName>PLSC__All_MPNs</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>PDLM__Manufacturer__c</columns>
    <columns>PDLM__Description__c</columns>
    <columns>PDLM__Used_on_Item__c</columns>
    <columns>JDM__c</columns>
    <columns>JDM_Part__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>PDLM__Primary_Key__c</columns>
    <columns>Lead_Time__c</columns>
    <columns>PDLM__Manufacturer_Name__c</columns>
    <columns>PDLM__Mfr_Name_and_Part_Number__c</columns>
    <columns>Notes__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All MPNs</label>
</ListView>